unpackaged/main/default/objects/dfsle__AgreementConfiguration__c/dfsle__AgreementConfiguration__c.object-meta.xml
<CustomObject>
    <label>Agreement Configuration</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>