unpackaged/main/default/objects/dfsle__AgreementConfiguration__c/fields/dfsle__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SourceObject__c</fullName>
    <externalId>true</externalId>
    <label>Source Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>