unpackaged/main/default/objects/dfsle__AgreementConfiguration__c/fields/dfsle__TempFolderId__c.field-meta.xml
<CustomField>
    <fullName>dfsle__TempFolderId__c</fullName>
    <externalId>true</externalId>
    <label>Temp Folder Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>